# hypermodern-python

./: poetry
hypermodern-python/: README.md  pyproject.toml
hypermodern-python/src/hypermodern_python/: console.py
hypermodern-python/src/hypermodern_python/Backend/: main.py
hypermodern-python/src/hypermodern_python/Backend/addNotes/: __init__.py  addNotes.py
hypermodern-python/src/hypermodern_python/Backend/createuser/: __init__.py  createuser.py
hypermodern-python/src/hypermodern_python/Backend/db/: supabase.py
hypermodern-python/src/hypermodern_python/Backend/deleteNotes/: __init__.py  deleteNotes.py
hypermodern-python/src/hypermodern_python/Backend/getuser/: __init__.py  getuser.py
hypermodern-python/src/hypermodern_python/Backend/updateuser/: __init__.py  updateuser.py
