# pyproject.toml
[tool.poetry]
name = "hypermodern-python"
version = "0.1.0"
description = "The hypermodern Python project"
authors = ["shweta <shweta@shareintent.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/shw-share-intent/hypermodern-python"
repository = "https://github.com/shw-share-intent/hypermodern-python"
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.7 || ^3.8"
click = "^7.0"
requests = "^2.31.0"


[tool.poetry.scripts]
hypermodern-python = "hypermodern_python.console:main"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
